objects/Newstar_Log_Event__e.object
<CustomObject>
    <fields>
        <fullName>Context__c</fullName>
        <label>Context</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Correlation_ID__c</fullName>
        <label>Correlation ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Object_ID__c</fullName>
        <label>Primary Object ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trace_Info__c</fullName>
        <label>Trace Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>NEWSTAR Log Event</label>
    <pluralLabel>NEWSTAR Log Events</pluralLabel>
</CustomObject>